fixed padding on small cards

--- a/board/board.css
+++ b/board/board.css
@@ -633,8 +633,6 @@ body.modal-open {
 
 .todo-card {
     display: flex;
-    width: 252px;
-    height: 215px;
     gap: 10px;
     padding: 16px;
     border-radius: 24px;
